@@ -12,7 +12,6 @@ package org.junit.platform.commons.support.scanning;
 
 import static java.util.Collections.emptyList;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static org.apiguardian.api.API.Status.INTERNAL;
 import static org.junit.platform.commons.support.scanning.ClasspathFilters.CLASS_FILE_SUFFIX;
 import static org.junit.platform.commons.util.StringUtils.isNotBlank;
@@ -131,7 +130,7 @@ public class DefaultClasspathScanner implements ClasspathScanner {
 				.map(baseUri -> findClassesForUri(baseUri, basePackageName, classFilter))
 				.flatMap(Collection::stream)
 				.distinct()
-				.collect(toList());
+				.toList();
 		// @formatter:on
 	}
 
@@ -155,7 +154,7 @@ public class DefaultClasspathScanner implements ClasspathScanner {
 				.map(baseUri -> findResourcesForUri(baseUri, basePackageName, resourceFilter))
 				.flatMap(Collection::stream)
 				.distinct()
-				.collect(toList());
+				.toList();
 		// @formatter:on
 	}
 
