@@ -11,7 +11,6 @@
 package org.junit.platform.launcher.core;
 
 import static java.util.Collections.unmodifiableList;
-import static java.util.stream.Collectors.toList;
 
 import java.util.List;
 
@@ -70,7 +69,7 @@ final class DefaultDiscoveryRequest implements LauncherDiscoveryRequest {
 	@Override
 	public <T extends DiscoverySelector> List<T> getSelectorsByType(Class<T> selectorType) {
 		Preconditions.notNull(selectorType, "selectorType must not be null");
-		return this.selectors.stream().filter(selectorType::isInstance).map(selectorType::cast).collect(toList());
+		return this.selectors.stream().filter(selectorType::isInstance).map(selectorType::cast).toList();
 	}
 
 	@Override
@@ -81,7 +80,7 @@ final class DefaultDiscoveryRequest implements LauncherDiscoveryRequest {
 	@Override
 	public <T extends DiscoveryFilter<?>> List<T> getFiltersByType(Class<T> filterType) {
 		Preconditions.notNull(filterType, "filterType must not be null");
-		return this.discoveryFilters.stream().filter(filterType::isInstance).map(filterType::cast).collect(toList());
+		return this.discoveryFilters.stream().filter(filterType::isInstance).map(filterType::cast).toList();
 	}
 
 	@Override
